# SwingTrading

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: bollinger_rsi_spy.yaml
src/daytrade_backtester/: cli.py
src/daytrade_backtester/config/: loader.py  models.py
src/daytrade_backtester/data/: cache.py  options_polygon.py  options_yahoo.py  yahoo.py
src/daytrade_backtester/engine/: backtester.py  options_enrich.py
src/daytrade_backtester/reporting/: charts.py  console.py  export.py
src/daytrade_backtester/strategies/: base.py  bollinger_rsi_reversal.py  registry.py
src/daytrade_backtester/utils/: indicators.py
tests/: test_import.py
